# x-flux

./: .gitignore  main.py  predict.py  pyproject.toml  train_flux_deepspeed.py  train_flux_deepspeed_controlnet.py  train_flux_lora_deepspeed.py
image_datasets/: canny_dataset.py  dataset.py
src/x_flux/: cli.py  controlnet.py  model.py  sampling.py  util.py  xflux_pipeline.py
src/x_flux/annotator/dwpose/: __init__.py  wholebody.py
src/x_flux/annotator/hed/: __init__.py
src/x_flux/annotator/midas/: __init__.py  api.py  utils.py
src/x_flux/annotator/midas/midas/: blocks.py  dpt_depth.py  midas_net_custom.py  vit.py
src/x_flux/annotator/mlsd/: __init__.py  utils.py
src/x_flux/annotator/tile/: __init__.py  guided_filter.py
src/x_flux/modules/: layers.py
