[tool.poetry]
name = "x-flux"
version = "0.1.0"
description = ""
authors = ["XLabs AI", "Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{ include = "flux", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
pytest = ">=6.0.0"
mypy = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
