[tool.poetry]
name = "x-flux"
version = "0.1.0"
description = ""
authors = ["XLabs AI", "Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{ include = "x_flux", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = ">=0.30.1"
datasets = "^2.21.0"
deepspeed = ">=0.14.4"
diffusers = { version = ">=0.30.0", extras = ["torch"] }
einops = ">=0.8.0"
matplotlib = "^3.9.2"
onnxruntime = "^1.19.0"
omegaconf = "^2.3.0"
optimum-quanto = "^0.2.4"
opencv-python = "^4.10.0.84"
sentencepiece = "^0.2.0"
transformers = ">=4.43.3"
timm = "^1.0.8"
torchvision = "^0.19.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
pytest = ">=6.0.0"
mypy = ">=1.0.0"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
